--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
                     <li><a href="#" class="nav-link" data-page="documentations">Documentations</a></li>
                     <li><a href="#" class="nav-link" data-page="rth">RTH</a></li>
                     <li><a href="#" class="nav-link" data-page="photos">Photos</a></li>
-                    <li><a href="#" class="nav-link" data-page="communication">Communication <span id="notifDot" class="notif-dot" title="Nouveaux messages"></span></a></li>
+                    <li>
+                        <a href="#" class="nav-link" data-page="communication">
+                            Communication
+                            <span id="chatNotifDot" class="notif-dot" title="Nouveaux messages"></span>
+                        </a>
+                    </li>
                     <li><a href="#" class="nav-link" data-page="liens">Liens utiles</a></li>
                 </ul>
             </nav>
@@ -24,28 +29,35 @@
 
         <div class="header-right">
             <div id="dateTime"></div>
-            <button id="themeToggle" class="btn icon-btn" title="Changer le thème">🌓</button>
+            <button id="themeToggle" class="btn icon-btn" title="Changer le thème" aria-label="Changer le thème">🌓</button>
             <button id="loginBtn" class="btn">Connexion</button>
-            <button id="logoutBtn" class="btn" style="display:none;">Déconnexion</button>
+            <button id="logoutBtn" class="btn secondary" style="display:none;">Déconnexion</button>
         </div>
     </header>
 
     <main>
         <!-- ACCUEIL -->
         <section id="accueil" class="page active">
-            <div class="accueil-container card">
-                <h2>Bienvenue sur le site de la Division SIC</h2>
+            <h2>Accueil</h2>
 
-                <div id="accueil-text" class="editable" contenteditable="false">
-                    Bienvenue sur le site le plus utile pour vos missions !
+
+            <div class="grid-2">
+                <div class="card">
+                    <h3>Message d’accueil</h3>
+                    <p id="accueil-text" contenteditable="false" class="editable-area">
+                        Bienvenue sur l’espace local de la Division SIC.
+                        Connectez-vous pour modifier ce texte et l’adapter à vos besoins.
+                    </p>
                 </div>
-
-                <div id="imageContainer">
-                    <img id="accueilImage" src="" alt="Image d'accueil" style="display:none;">
-                    <input type="file" id="imageUpload" accept="image/*" style="display:none;">
-                    <div id="imageButtons">
-                        <button id="uploadBtn" style="display:none;">📤 Téléverser une image</button>
-                        <button id="deleteImgBtn" style="display:none; background:#cc0000;">🗑️ Supprimer l'image</button>
+                <div class="card">
+                    <h3>Image d’accueil</h3>
+                    <div class="accueil-image-wrapper">
+                        <img id="accueilImage" src="" alt="Image d’accueil" class="accueil-image" />
+                    </div>
+                    <div class="btn-row">
+                        <button id="uploadBtn" class="btn" style="display:none;">Changer l’image</button>
+                        <button id="deleteImgBtn" class="btn danger" style="display:none;">Supprimer</button>
+                        <input type="file" id="imageUpload" accept="image/*" style="display:none;">
                     </div>
                 </div>
             </div>
@@ -54,68 +66,112 @@
         <!-- DOCUMENTATIONS -->
         <section id="documentations" class="page">
             <h2>Documentations</h2>
-            <div id="docs-container" class="grid-cards"></div>
-            <button id="addDocBtn" style="display:none;" class="btn">+ Ajouter une documentation</button>
+
+            <div class="card">
+                <div class="docs-header">
+                    <span>Liste des documentations</span>
+                    <button id="addDocBtn" class="btn" style="display:none;">+ Ajouter une documentation</button>
+                </div>
+                <div id="docs-container" class="grid-cards"></div>
+            </div>
         </section>
 
         <!-- RTH -->
         <section id="rth" class="page">
             <h2>RTH</h2>
-            <p>Contenu à venir...</p>
+
+            <div class="card" style="overflow-x:auto;">
+                <div class="rth-header">
+                    <span>Tableau RTH</span>
+                    <div class="rth-controls">
+                        <select id="rthSortSelect">
+                            <option value="desc">Date décroissante</option>
+                            <option value="asc">Date croissante</option>
+                        </select>
+                        <button id="addRthBtn" class="btn" style="display:none;">Ajouter une ligne</button>
+                    </div>
+                </div>
+                <table class="rth-table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Matériel</th>
+                            <th>Lieu</th>
+                            <th>Observation</th>
+                        </tr>
+                    </thead>
+                    <tbody id="rthTableBody">
+                        <!-- Rempli dynamiquement par script.js -->
+                    </tbody>
+                </table>
+            </div>
         </section>
 
         <!-- PHOTOS -->
         <section id="photos" class="page">
-            <h2>Galerie Photos</h2>
-            <div id="photosContainer"></div>
-            <input type="file" id="photoUpload" accept="image/*" style="display:none;">
-            <button id="addPhotoBtn" style="display:none;" class="btn">+ Ajouter une photo</button>
+            <h2>Photos</h2>
+
+            <div class="card">
+                <div class="photos-header">
+                    <button id="addPhotoBtn" class="btn" style="display:none;">Ajouter une photo</button>
+                    <input type="file" id="photoUpload" accept="image/*" style="display:none;">
+                </div>
+                <div id="photosContainer" class="photos-grid"></div>
+            </div>
         </section>
 
-        <!-- COMMUNICATION -->
+        <!-- COMMUNICATION (CHAT) -->
         <section id="communication" class="page">
-            <h2>Communication - Chat local</h2>
-            <div id="chat-status">
-                <span id="onlineCount">0</span> utilisateur(s) en ligne
-            </div>
-            <div id="chat-box" class="chat-box card"></div>
-            <div id="chat-input-area" class="chat-input">
-                <input type="text" id="chat-name" placeholder="Votre nom">
-                <input type="text" id="chat-message" placeholder="Votre message">
-                <button id="sendMessageBtn" class="btn">Envoyer</button>
+            <h2>Communication (chat local)</h2>
+
+            <div class="card">
+                <div class="chat-header">
+                    <span>Salon principal</span>
+                    <span class="chat-meta"><span id="onlineCount">1</span> connecté(s)</span>
+                </div>
+                <div id="chatBox" class="chat-box"></div>
+                <div class="chat-input">
+                    <input type="text" id="chat-name" placeholder="Votre nom">
+                    <input type="text" id="chat-message" placeholder="Votre message">
+                    <button id="sendMessageBtn" class="btn">Envoyer</button>
+                    <button id="clearChatBtn" class="btn danger" style="display:none;">Vider le chat</button>
+                </div>
             </div>
         </section>
 
         <!-- LIENS UTILES -->
         <section id="liens" class="page">
             <h2>Liens utiles</h2>
-            <div id="links-container" class="grid-cards"></div>
-            <button id="addLinkBtn" style="display:none;" class="btn">+ Ajouter un lien utile</button>
+
+            <div class="card">
+                <div class="links-header">
+                    <span>Liste des liens</span>
+                    <button id="addLinkBtn" class="btn" style="display:none;">Ajouter un lien</button>
+                </div>
+                <div id="links-container" class="grid-cards"></div>
+            </div>
         </section>
     </main>
 
-    <footer>
-        <p>© 2025 Division SIC — SERGENT MARCY</p>
-    </footer>
-
-    <!-- MODALES -->
+    <!-- MODALE CONNEXION -->
     <div id="loginModal" class="modal">
-        <div class="modal-content card">
+        <div class="modal-content">
+            <span id="closeLoginModal" class="close-modal">&times;</span>
             <h3>Connexion</h3>
-            <input type="password" id="passwordInput" placeholder="Mot de passe" />
-            <div style="margin-top:12px;display:flex;gap:8px;justify-content:center;">
-                <button id="validateLogin" class="btn">Se connecter</button>
-                <button id="cancelLogin" class="btn outline">Annuler</button>
-            </div>
+            <p class="muted">Mot de passe requis pour activer les fonctions d’édition.</p>
+            <input type="password" id="passwordInput" placeholder="Mot de passe">
+            <button id="validateLogin" class="btn">Valider</button>
             <p id="loginError" class="error"></p>
         </div>
     </div>
 
-    <div id="photoModal" class="modal" style="align-items:center;justify-content:center;">
-        <span id="closePhotoModal" class="close-modal">&times;</span>
+    <!-- MODALE PHOTO -->
+    <div id="photoModal" class="modal photo-modal">
+        <span id="closePhotoModal" class="close-modal" aria-label="Fermer la photo">&times;</span>
         <img id="photoModalImg" class="modal-photo-content" alt="Photo">
     </div>
 
+    <!-- TOASTS -->
     <div id="toastContainer"></div>
 
     <script src="script.js"></script>
